WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
136568
REGRESSION(
r170243
): [EFL][WK2] Dirty image is shown when new page is loading on fixed layout
https://bugs.webkit.org/show_bug.cgi?id=136568
Summary
REGRESSION(r170243): [EFL][WK2] Dirty image is shown when new page is loading...
Gyuyoung Kim
Reported
2014-09-05 02:44:33 PDT
When fixed layout is on, dirty image is shown as soon as new page loading is begun.
Attachments
WIP
(4.61 KB, patch)
2014-09-05 02:45 PDT
,
Gyuyoung Kim
no flags
Details
Formatted Diff
Diff
Patch
(5.04 KB, patch)
2014-09-05 09:42 PDT
,
Gyuyoung Kim
no flags
Details
Formatted Diff
Diff
Patch
(5.21 KB, patch)
2014-09-06 06:07 PDT
,
Gyuyoung Kim
no flags
Details
Formatted Diff
Diff
Patch
(2.59 KB, patch)
2014-09-11 21:49 PDT
,
Gyuyoung Kim
no flags
Details
Formatted Diff
Diff
Show Obsolete
(3)
View All
Add attachment
proposed patch, testcase, etc.
Gyuyoung Kim
Comment 1
2014-09-05 02:45:49 PDT
Created
attachment 237681
[details]
WIP
Gyuyoung Kim
Comment 2
2014-09-05 02:47:21 PDT
Reproduce step 1. WebKitBuild/Release/bin/MiniBrowser -L 1
http://www.naver.com
2. Scroll page down 3. Press any link 4. Next page loading is begun after dirty image is shown.
Gyuyoung Kim
Comment 3
2014-09-05 09:42:56 PDT
Created
attachment 237696
[details]
Patch
Gyuyoung Kim
Comment 4
2014-09-06 06:07:47 PDT
Created
attachment 237734
[details]
Patch
Gyuyoung Kim
Comment 5
2014-09-10 17:15:14 PDT
CC'ing Yoon, what do you think about blocking to draw until next page's non-empty layout ?
Gyuyoung Kim
Comment 6
2014-09-11 21:49:13 PDT
Created
attachment 238015
[details]
Patch
Gyuyoung Kim
Comment 7
2014-09-11 21:50:49 PDT
CC'ing Ossy. Ossy, could you take a look this patch ? This is a simple patch to fix a regression caused by
r170242
, which you gave rs+ed.
Michal Pakula vel Rutka
Comment 8
2014-09-12 02:10:59 PDT
***
Bug 136744
has been marked as a duplicate of this bug. ***
WebKit Commit Bot
Comment 9
2014-09-15 03:04:51 PDT
Comment on
attachment 238015
[details]
Patch Clearing flags on attachment: 238015 Committed
r173617
: <
http://trac.webkit.org/changeset/173617
>
WebKit Commit Bot
Comment 10
2014-09-15 03:04:58 PDT
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug