REGRESSION(r170243): [EFL][WK2] Dirty image is shown when new page is loading on fixed layout https://bugs.webkit.org/show_bug.cgi?id=136568

Reviewed by Csaba Osztrogonác.

r170243 landed wrong didCommitNewPage() since it always returns false. It cause that
PageViewportControllerClientEfl::didChangeVisibleContents() continues to draw dirty image on 0,0 coordinate.
This patch fixes the problem.

* UIProcess/API/efl/EwkView.h:
(EwkView::waitingForNewPage):
(EwkView::didCommitNewPage):
* UIProcess/efl/PageViewportControllerClientEfl.cpp:
(WebKit::PageViewportControllerClientEfl::didChangeVisibleContents):


Canonical link: https://commits.webkit.org/154645@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@173617 268f45cc-cd09-0410-ab3c-d52691b4dbfc