Source/WebKit2/UIProcess/efl/PageViewportControllerClientEfl.cpp
@@ -60,7 +60,7 @@ void PageViewportControllerClientEfl::setPageScaleFactor(float newScale)
 
 void PageViewportControllerClientEfl::didChangeVisibleContents()
 {
-    if (m_view->didCommitNewPage())
+    if (m_view->waitingForNewPage())
         return;
 
     m_view->scheduleUpdateDisplay();
